feat: Intégration MeSomb pour paiements MTN et Orange Money unifiés
- Ajout du SDK @hachther/mesomb v2.0.1
- Création de MeSombProvider implémentant IPaymentProvider
- Normalisation téléphone format 237XXXXXXXXX
- Détection automatique opérateur (MTN/Orange)
- Vérification signature webhook (SHA1/SHA256, hex/base64)
- Ajout endpoint webhook /api/webhooks/mesomb
- Ajout MeSombWebhookDto pour validation
- Migration PaymentsService: MTN et Orange utilisent MeSomb
- Webhooks MTN/Orange marqués LEGACY (compatibilité)
- Documentation complète MESOMB_INTEGRATION.md
- Configuration .env.example avec clés MeSomb
- Ajout .gitignore pour fichiers sensibles

MeSomb remplace les intégrations séparées MTN et Orange Money
avec une API unifiée plus simple et plus fiable.

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -33,24 +33,34 @@ CLOUDINARY_API_SECRET="your-api-secret"
 CLOUDINARY_FOLDER="spotlight-lover"
 
 # ==============================================
-# PAIEMENTS - MTN MOBILE MONEY
+# PAIEMENTS - MESOMB (MTN + ORANGE MONEY UNIFIÉ)
 # ==============================================
+# MeSomb gère MTN Mobile Money et Orange Money via une seule API
+MESOMB_APP_KEY="your-mesomb-application-key"
+MESOMB_API_KEY="your-mesomb-access-key"
+MESOMB_SECRET_KEY="your-mesomb-secret-key"
+MESOMB_ENVIRONMENT="sandbox"
+# Options: sandbox, production
+
+# ==============================================
+# PAIEMENTS - MTN MOBILE MONEY (LEGACY - Non utilisé avec MeSomb)
+# ==============================================
+# Ces variables sont conservées pour référence mais ne sont plus utilisées
+# MTN et Orange sont maintenant gérés par MeSomb
 MTN_MOMO_API_KEY="your-mtn-api-key"
 MTN_MOMO_API_SECRET="your-mtn-api-secret"
 MTN_MOMO_SUBSCRIPTION_KEY="your-mtn-subscription-key"
 MTN_MOMO_CALLBACK_URL="https://your-domain.com/api/webhooks/mtn"
 MTN_MOMO_ENVIRONMENT="sandbox"
-# Options: sandbox, production
 
 # ==============================================
-# PAIEMENTS - ORANGE MONEY
+# PAIEMENTS - ORANGE MONEY (LEGACY - Non utilisé avec MeSomb)
 # ==============================================
 ORANGE_MONEY_CLIENT_ID="your-orange-client-id"
 ORANGE_MONEY_CLIENT_SECRET="your-orange-client-secret"
 ORANGE_MONEY_MERCHANT_KEY="your-merchant-key"
 ORANGE_MONEY_CALLBACK_URL="https://your-domain.com/api/webhooks/orange"
 ORANGE_MONEY_ENVIRONMENT="sandbox"
-# Options: sandbox, production
 
 # ==============================================
 # PAIEMENTS - STRIPE (Cartes bancaires)
