--- a/backend/package.json
+++ b/backend/package.json
@@ -26,6 +26,7 @@
     "prisma:reset": "prisma migrate reset"
   },
   "dependencies": {
+    "@hachther/mesomb": "^2.0.1",
     "@nestjs/common": "^10.3.0",
     "@nestjs/config": "^3.1.1",
     "@nestjs/core": "^10.3.0",
