--- a/backend/package.json
+++ b/backend/package.json
@@ -23,7 +23,8 @@
     "prisma:migrate:prod": "prisma migrate deploy",
     "prisma:seed": "ts-node prisma/seed.ts",
     "prisma:studio": "prisma studio",
-    "prisma:reset": "prisma migrate reset"
+    "prisma:reset": "prisma migrate reset",
+    "create-admin": "ts-node create-admin.ts"
   },
   "dependencies": {
     "@hachther/mesomb": "^2.0.1",
