--- a/backend/package.json
+++ b/backend/package.json
@@ -37,6 +37,7 @@
     "@nestjs/platform-express": "^10.3.0",
     "@nestjs/platform-socket.io": "^10.4.20",
     "@nestjs/schedule": "^4.0.0",
+    "@nestjs/swagger": "^11.2.3",
     "@nestjs/throttler": "^5.1.1",
     "@nestjs/websockets": "^10.4.20",
     "@prisma/client": "^5.8.0",
@@ -46,6 +47,7 @@
     "class-validator": "^0.14.1",
     "cloudinary": "^1.41.1",
     "compression": "^1.7.4",
+    "express": "^5.2.1",
     "express-rate-limit": "^7.1.5",
     "helmet": "^7.1.0",
     "ioredis": "^5.3.2",
@@ -53,9 +55,11 @@
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
     "qrcode": "^1.5.3",
+    "reflect-metadata": "^0.2.2",
     "socket.io": "^4.8.1",
     "speakeasy": "^2.0.0",
     "stripe": "^14.10.0",
+    "swagger-ui-express": "^5.0.1",
     "winston": "^3.11.0"
   },
   "devDependencies": {
@@ -63,7 +67,7 @@
     "@nestjs/schematics": "^10.1.0",
     "@nestjs/testing": "^10.3.0",
     "@types/bcrypt": "^5.0.2",
-    "@types/express": "^4.17.21",
+    "@types/express": "^4.17.25",
     "@types/jest": "^29.5.11",
     "@types/node": "^20.11.0",
     "@types/passport-jwt": "^4.0.0",
@@ -81,7 +85,8 @@
     "ts-loader": "^9.5.1",
     "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
-    "typescript": "^5.3.3"
+    "typescript": "^5.3.3",
+    "webpack": "^5.103.0"
   },
   "jest": {
     "moduleFileExtensions": [
