🔄 Migration PostgreSQL: Admin → User avec UserType
✅ Schéma Prisma adapté:
   - Admin → User avec userType: UserType
   - Enum AdminRole → UserType (USER, CANDIDATE, ADMIN, MODERATOR)
   - Relations complètes: User ↔ Candidate, User → Vote
   - Support PostgreSQL natif (enums, JSON)

✅ Backend restructuré:
   - AdminModule → UsersModule
   - admin.controller.ts → users.controller.ts
   - admin.service.ts → users.service.ts
   - DTOs adaptés: UpdateAdminDto → UpdateUserDto

✅ Routes API mises à jour:
   - /api/admin/* → /api/admin/users/*
   - Tous les endpoints fonctionnels

✅ Scripts & Configuration:
   - seed-admin.js → seed-user.js
   - DATABASE_URL configuré pour PostgreSQL
   - Documentation migration complète

📚 Docs ajoutées:
   - MIGRATION_POSTGRESQL.md (guide complet)
   - DEMARRAGE_RAPIDE_POSTGRESQL.md (quickstart)

🎯 Prêt pour PostgreSQL avec Docker ou cloud!

--- a/backend/package.json
+++ b/backend/package.json
@@ -24,7 +24,8 @@
     "prisma:seed": "ts-node prisma/seed.ts",
     "prisma:studio": "prisma studio",
     "prisma:reset": "prisma migrate reset",
-    "create-admin": "ts-node create-admin.ts"
+    "create-admin": "ts-node create-admin.ts",
+    "seed-user": "node seed-user.js"
   },
   "dependencies": {
     "@hachther/mesomb": "^2.0.1",
